# wiki-speedrun

./: README.md  evaluate_results.ipynb  evaluation_results.json  evalute.py  main.py  pyproject.toml  traversal.py  utils.py
eda/: get_interesting_links.py  get_list_of_all_link.py  optimis.ipynb
